lender/tests/fail/once_covariant.stderr
error[E0277]: the trait bound `Invariant: CovariantLending` is not satisfied
  --> tests/fail/once_covariant.rs:20:28
   |
20 |     let _ = lender::once::<Invariant>(v);
   |                            ^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `CovariantLending` is not implemented for `Invariant`
  --> tests/fail/once_covariant.rs:7:1
   |
 7 | struct Invariant;
   | ^^^^^^^^^^^^^^^^
note: required by a bound in `lender::once`
  --> src/sources/once.rs
   |
   | pub fn once<'a, L: ?Sized + CovariantLending>(value: Lend<'a, L>) -> Once<'a, L> {
   |                             ^^^^^^^^^^^^^^^^ required by this bound in `once`

error[E0277]: the trait bound `Invariant: CovariantLending` is not satisfied
  --> tests/fail/once_covariant.rs:20:13
   |
20 |     let _ = lender::once::<Invariant>(v);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `CovariantLending` is not implemented for `Invariant`
  --> tests/fail/once_covariant.rs:7:1
   |
 7 | struct Invariant;
   | ^^^^^^^^^^^^^^^^
note: required by a bound in `lender::Once`
  --> src/sources/once.rs
   |
   | pub struct Once<'a, L>
   |            ---- required by a bound in this struct
   | where
   |     L: ?Sized + CovariantLending,
   |                 ^^^^^^^^^^^^^^^^ required by this bound in `Once`

error[E0277]: the trait bound `FallibleInvariant: CovariantFallibleLending` is not satisfied
  --> tests/fail/once_covariant.rs:24:53
   |
24 |     let _ = lender::fallible_once::<std::io::Error, FallibleInvariant>(v);
   |                                                     ^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `CovariantFallibleLending` is not implemented for `FallibleInvariant`
  --> tests/fail/once_covariant.rs:13:1
   |
13 | struct FallibleInvariant;
   | ^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `fallible_once`
  --> src/sources/once.rs
   |
   | pub fn fallible_once<'a, E, L: ?Sized + CovariantFallibleLending>(
   |                                         ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `fallible_once`

error[E0277]: the trait bound `FallibleInvariant: CovariantFallibleLending` is not satisfied
  --> tests/fail/once_covariant.rs:24:13
   |
24 |     let _ = lender::fallible_once::<std::io::Error, FallibleInvariant>(v);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `CovariantFallibleLending` is not implemented for `FallibleInvariant`
  --> tests/fail/once_covariant.rs:13:1
   |
13 | struct FallibleInvariant;
   | ^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `FallibleOnce`
  --> src/sources/once.rs
   |
   | pub struct FallibleOnce<'a, E, L>
   |            ------------ required by a bound in this struct
   | where
   |     L: ?Sized + CovariantFallibleLending,
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `FallibleOnce`
